<resources>
    <!-- App specifics -->
    <string name="app_name">Careless</string>
    <string name="app_tag">Makes you careless</string>

    <!-- Commonly used strings -->
    <string name="ans">Answer</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_credit">Credits</string>
    <string name="action_bugs">Bugs</string>
    <string name="enterPass">Enter your password</string>
    <string name="forgetPass">Forget password</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>

    <!-- first run string -->
    <string name="brCareless">Be Careless</string>
    <string name="kickStart">Kickstart by saving details</string>
    <string name="passHint">Enter your password.Min length: 8 </string>
    <string name="passAgainHint">Confirm password</string>
    <string name="chooseHintQ">Pick an question</string>
    <string name="fillUpHintA">Fill up answer</string>
    <string name="savingData">Saving data…</string>


    <!-- hint questions -->
    <string-array name="hintQ">
        <item>What is your favorite color?</item>
        <item>What is your favorite food?</item>
        <item>What is your mother\'s maiden name?</item>
        <item>Who is your favorite teacher?</item>
        <item>What is your favorite game?</item>
    </string-array>

    <!-- doc types -->
    <string-array name="docTypes">
        <item>Fixed deposit</item>
        <item>Insurance</item>
        <item>Vehicle Insurance</item>
        <item>Recharge</item>
        <item>Renewal</item>
        <item>Mutual funds</item>
        <item>Loan</item>
        <item>Others</item>
    </string-array>



    <!-- entryApp string -->
    <string name="ansQues">Answer the question</string>
    <string name="putHint">What is your answer?</string>

    <!-- add new item -->
    <string name="addNew">Add new item</string>
    <string name="typeSelect">Select type</string>
    <string name="yetTo">Yet to be decided</string>
    <string name="policyNum">Enter policy number</string>
    <string name="specifications">Enter specifications</string>
    <string name="particulars">Any Particulars</string>
    <string name="objIdHint">Numbers only</string>
    <string name="entermAmt">Enter maturity amount</string>
    <string name="enterpAmt">Enter premium amount</string>


    <!-- policyNum array based on type chosen -->
    <string-array name="policyNum">
        <item>Enter identification number</item>
        <item>Enter policy number</item>
        <item>Enter license number</item>
        <item>Enter mobile number</item>
    </string-array>


    <!-- doc shower strings -->
    <string name="imgDec">Image according to doc type</string>
    <string name="mobNo">Mobile No.</string>
    <string name="licNo">Licence No.</string>
    <string name="polNo">Policy No.</string>

    <string name="bank">Bank</string>
    <string name="operator">Operator</string>
    <string name="merchant">Merchant</string>


    <string name="matAmt">Maturity Amount</string>
    <string name="recharge">Recharge of</string>
    <string name="renewal">Renewal of</string>

    <string name="matDate">Date of Maturity</string>
    <string name="recDate">Recharge date</string>
    <string name="renDate">Renewal date</string>

    <string name="premium">Premium</string>
    <string name="patDate">Premium date</string>
    <string name="hello_world">Hello world!</string>

    <!--- change password -->
    <string name="changePassword">Change password</string>

</resources>
