<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/doc_type_o"
            android:contentDescription="@string/imgDec"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/typeSelect"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/polNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/yetTo"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:textColor="@color/grey_400"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView" />

        <TextView
            android:id="@+id/objMamtHead"
            android:textSize="15sp"
            android:textColor="@color/grey_500"
            android:text="@string/enterpAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/objId"
            android:layout_marginTop="30dp"
            android:hint="@string/objIdHint"
            android:inputType="number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/objIdHead"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <EditText
            android:layout_marginTop="100dp"
            android:hint="@string/patDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="140dp"
            android:background="@color/green_700"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:drawableStart="@drawable/ic_action_back"
            android:drawableLeft="@drawable/ic_action_back"
            android:drawablePadding="-15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:id="@+id/cancelFrag_done"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/objId"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginTop="120dp" />

        <Button
            android:layout_width="140dp"
            android:background="@color/green_700"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:id="@+id/doneBtn"
            android:textColor="@color/white"
            android:drawableEnd="@drawable/ic_action_accept"
            android:drawableRight="@drawable/ic_action_accept"
            android:drawablePadding="-15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignTop="@+id/cancelFrag_done"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>