<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="shivangnagaria.careless.appEntry">


    <item
        android:id="@+id/action_add_new"
        android:title="@string/addNew"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_credits"
        android:title="@string/action_about"
        android:orderInCategory="50"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_bugs"
        android:title="@string/action_bugs"
        android:orderInCategory="30"
        app:showAsAction="never"/>
</menu>
